--- a/scss/pirateborg/_root.scss
+++ b/scss/pirateborg/_root.scss
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&family=IM+Fell+English:ital@0;1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=IM+Fell+English+SC&family=IM+Fell+English:ital@0;1&display=swap");
 
 :root {
   /* try to deprecated */
