--- a/scss/pirateborg/_character-sheet.scss
+++ b/scss/pirateborg/_character-sheet.scss
@@ -1,156 +1,8 @@
 .pirateborg {
   &.sheet {
     &.actor.character {
-      min-width: 742px;
-      min-height: 650px;
-
-      .sheet-header {
-        gap: 16px;
-        .header-col1 {
-          flex: 0 0 100px;
-          padding: 0;
-          line-height: 0;
-        }
-
-        .header-col2 {
-          flex: 1;
-          display: flex;
-          flex-direction: column;
-          padding-left: 4px;
-
-          .rest-buttons {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-
-            button {
-              width: auto;
-            }
-          }
-        }
-
-        .header-col3 {
-          flex: 0 0 120px;
-          display: flex;
-          flex-direction: column;
-          gap: 10px;
-        }
-
-        .profile-img {
-          height: 100px;
-          width: 100px;
-          border-radius: 24px;
-          object-fit: contain;
-        }
-
-        .name-row {
-          margin-left: -4px;
-        }
-
-        .classname-row {
-          display: flex;
-          flex-direction: row;
-          margin-bottom: 19px;
-          margin-left: 0px;
-          align-items: stretch;
-          flex-wrap: nowrap;
-
-          img.classimg {
-            height: 24px;
-            width: 24px;
-            flex: 0 0 24px;
-            margin-right: 5px;
-          }
-
-          label.classname {
-            font-family: var(--h3-font);
-            font-size: 20px;
-            white-space: nowrap;
-          }
-
-          label.item-base-class {
-            text-overflow: ellipsis;
-            overflow: hidden;
-          }
-
-          .item-controls {
-            flex: 0 0 35px;
-            text-align: right;
-            margin-right: 0;
-
-            /* TODO: fix vertical alignment in a better way */
-            padding-top: 6px;
-          }
-        }
-
-        .hitpoints-row {
-          display: flex;
-          align-items: center;
-          margin-bottom: 4px;
-          gap: 4px;
-        }
-
-        .hp-entries {
-          display: flex;
-          align-items: center;
-          gap: 4px;
-          span {
-            font-size: 18px;
-            margin-top: 3px;
-          }
-        }
-
-        .luck-row {
-          display: flex;
-          margin-bottom: 8px;
-          align-items: center;
-          gap: 4px;
-
-          .luck-label:hover {
-            text-shadow: 0 0 16px var(--highlight-background-color);
-            cursor: pointer;
-          }
-        }
-
-        .luck-rule {
-        }
-
-        .stat-label {
-        }
-
-        .ability-row {
-          display: flex;
-          flex-direction: row;
-          align-items: center;
-          gap: 2px;
-          &:last-child {
-            margin-bottom: 0;
-          }
-        }
-
-        .ability-label {
-          font-family: var(--item-font);
-          font-size: 16px;
-          margin-left: 5px;
-          display: block;
-          padding-top: 2px;
-        }
-
-        .ability-input {
-          border: none;
-          font-family: var(--item-font);
-          font-size: 32px;
-          text-align: center;
-          width: 42px;
-          height: 32px;
-          border-radius: 0;
-          color: var(--foreground-color);
-          font-weight: 600;
-          padding-bottom: 4px;
-          border-radius: 4px;
-          text-align: right;
-        }
-      }
+      min-width: 600px;
+      min-height: 450px;
 
       .sheet-body {
         .powers-top-row {
@@ -204,15 +56,6 @@
             span {
               font-size: 18px;
             }
-
-            .stat-value {
-              color: var(--foreground-color);
-              font-size: 32px;
-              font-weight: 600;
-              padding: 0;
-              margin-top: -8px;
-              line-height: 32px;
-            }
           }
         }
 
@@ -222,7 +65,7 @@
 
         .encumbered {
           color: var(--highlight-background-color);
-          font-weight: 600;
+          font-weight: bold;
         }
       }
     }
