--- a/scss/pirateborg/_container-sheet.scss
+++ b/scss/pirateborg/_container-sheet.scss
@@ -1,46 +1,8 @@
 .pirateborg {
   &.sheet {
     &.actor {
-      &.container .sheet-header {
-        margin: 16px;
-        display: flex;
-        flex-direction: row;
-        flex: none;
-        align-items: flex-start;
-        gap: 16px;
-
-        .header-col1 {
-          flex: 0 0 200px;
-          margin-right: 8px;
-          line-height: 0;
-        }
-
-        .header-col2 {
-          display: flex;
-          flex: 1;
-          flex-direction: column;
-          height: 100%;
-          justify-content: flex-start;
-        }
-
-        .profile-img {
-          height: 200px;
-          width: 200px;
-          border-radius: 24px;
-        }
-
-        .name-row {
-          flex: 0 0 45px;
-          width: 100%;
-        }
-
-        input[type="text"].container-name {
-          height: 45px;
-        }
-
-        .holding-row {
-          flex: 0 0 35px;
-        }
+      &.container {
+        min-width: 500px;
       }
     }
   }
