--- a/scss/pirateborg/_creature-sheet.scss
+++ b/scss/pirateborg/_creature-sheet.scss
@@ -1,55 +1,8 @@
 .pirateborg {
   &.sheet {
-    &.actor.creature .sheet-header {
-      margin: 16px;
-      display: flex;
-      flex-direction: row;
-      flex: none;
-      align-items: flex-start;
-      gap: 16px;
-
-      .header-col1 {
-        flex: 0 0 200px;
-        margin-right: 8px;
-        line-height: 0;
-      }
-
-      .header-col2 {
-        display: flex;
-        flex: 1;
-        flex-direction: column;
-        height: 100%;
-        justify-content: flex-start;
-      }
-
-      .profile-img {
-        height: 200px;
-        width: 200px;
-        border-radius: 24px;
-      }
-
-      .name-row {
-        flex: 0 0 45px;
-        width: 100%;
-      }
-
-      input[type="text"].creature-name {
-        height: 45px;
-      }
-
-      .hitpoints-row {
-        flex: 0 0 35px;
-        margin-bottom: 10px;
-      }
-
-      .buttons-row {
-        display: flex;
-        justify-content: flex-start;
-        gap: 8px;
-
-        button {
-          width: auto;
-        }
+    &.actor {
+      .creature {
+        min-width: 500px;
       }
     }
   }
