--- a/scss/pirateborg/_dialog.scss
+++ b/scss/pirateborg/_dialog.scss
@@ -7,9 +7,11 @@
 
   label {
     font-family: var(--item-font);
-    font-size: 20px;
+    font-size: 16px;
     margin-right: 10px;
     text-align: right;
+    font-weight: 500;
+    line-height: 26px;
   }
 }
 
@@ -43,8 +45,8 @@
   }
 
   .subtitle {
-    font-family: var(--h2-font);
-    font-size: 22px;
+    font-family: var(--h3-font);
+    font-size: 30px;
   }
 
   .description {
@@ -93,7 +95,6 @@
       font-size: 14px;
       width: auto;
       padding: 0 16px;
-      font-weight: 500;
       width: 100%;
 
       &:active,
