--- a/scss/pirateborg/_foundry-overrides.scss
+++ b/scss/pirateborg/_foundry-overrides.scss
@@ -45,12 +45,11 @@ form button {
   border-radius: 24px;
   font-size: 14px;
   padding: 0 16px;
-  font-weight: 500;
   line-height: 24px;
-  padding-top: 1px;
+  height: 24px;
   cursor: pointer;
-  height: 28px;
   white-space: nowrap;
+  width: auto;
 
   &:hover {
     box-shadow: 0 0 10px var(--highlight-background-color);
@@ -60,6 +59,7 @@ form button {
 .chat-message form button.item-button {
   font-size: 16px;
   margin-top: 24px;
+  width: 100%;
 }
 
 a:hover {
@@ -120,52 +120,134 @@ form.editable .results {
 
 /* Fixes Module Management dialog */
 
-#module-management .package-list {
-  .package-title,
-  .package-metadata,
-  .package-description {
+#module-management {
+  input {
     color: var(--foreground-color);
+    border: 2px groove var(--light-border-color);
+    background: rgba(255, 255, 255, 0.2);
+  }
+
+  .package-list {
+    .package-title,
+    .package-metadata,
+    .package-description {
+      color: var(--foreground-color);
+    }
   }
 }
 
 /* Fixes hard-to-read dark text on various system Dialogs */
 
-.window-app .window-content {
-  .notes {
-  }
+.window-app {
+  .window-content {
+    background: var(--window-background);
+    color: var(--foreground-color);
 
-  form {
-    .form-header {
-    }
+    form {
+      button[type="submit"] {
+        height: 28px;
+        width: 100%;
+      }
+      .tab {
+        margin-bottom: 16px;
+        border-bottom-left-radius: 16px;
+        border-bottom-right-radius: 16px;
+        background: rgba(255, 255, 255, 0.2);
+        border: 1px solid var(--dark-border-color);
+        border-top: none;
+        padding: 16px;
+        overflow-y: auto;
+        max-height: calc(100vh - 250px);
 
-    .notes {
-    }
-  }
+        .tabs {
+          .item {
+            font-size: 16px;
+            font-weight: 400;
+          }
+        }
 
-  .form-group {
-    input {
-      color: var(--foreground-color);
-      border: 2px groove var(--light-border-color);
-      background: rgba(255, 255, 255, 0.2);
+        .tab {
+          margin-bottom: 0;
+          padding: 8px;
+        }
 
-      &:hover,
-      &:focus {
-        box-shadow: 0 0 10px var(--highlight-background-color);
+        button {
+          label {
+            font-size: 14px;
+            font-weight: 400;
+          }
+        }
       }
 
-      &.readonly {
-        color: gray;
+      .tabs {
+        border: none;
+        padding: 0;
+        margin: 0;
+        flex: 0;
+        .item {
+          text-align: center;
+          font-family: var(--h2-font);
+          font-size: 18px;
+          height: 36px;
+          line-height: 38px;
+          width: 100%;
+          white-space: nowrap;
+          border: 1px solid transparent;
+          border-bottom: 1px solid var(--dark-border-color);
+          padding: 0 8px;
+          text-transform: none;
+          padding-left: 16px;
+          padding-right: 16px;
+          &.active {
+            border-top-left-radius: 8px;
+            border-top-right-radius: 8px;
+            background: rgba(255, 255, 255, 0.2);
+            border: 1px solid var(--dark-border-color);
+            border-bottom: 0;
+          }
+          &.active:hover {
+            text-shadow: none;
+          }
+        }
       }
+    }
 
-      &:hover.readonly,
-      &:focus.readonly {
-        box-shadow: none;
-        cursor: default;
+    .form-group {
+      input[type="range"] {
+        background: none;
+        border: none;
+        &:hover,
+        &:focus {
+          box-shadow: none;
+        }
+      }
+      input[type="range"] + .range-value {
+        background: rgba(255, 255, 255, 0.2);
+        border: none;
+      }
+      input {
+        color: var(--foreground-color);
+        border: 2px groove var(--light-border-color);
+        background: rgba(255, 255, 255, 0.2);
+
+        &:hover,
+        &:focus {
+          box-shadow: 0 0 10px var(--highlight-background-color);
+        }
+
+        &.readonly {
+          color: gray;
+        }
+
+        &:hover.readonly,
+        &:focus.readonly {
+          box-shadow: none;
+          cursor: default;
+        }
       }
     }
   }
 }
-
 /* TODO: determine if we need both .notes and form .notes styles specified */
 
 /* Fix readonly input on defend dialog */
@@ -345,21 +427,27 @@ form.editable .results {
   }
 }
 
-#client-settings {
-  section.content .submenu > button,
-  button {
-    background: var(--button-background);
-    color: var(--button-color);
-    font-family: var(--button-font);
-    border: none;
-    border-radius: 24px;
-    font-size: 14px;
-    padding: 0 16px;
-    font-weight: 500;
-    cursor: pointer;
-    height: auto;
-  }
+.token-sheet {
+  min-width: 700px;
+}
 
+#client-settings {
+  section.content {
+    border: none;
+    .settings-list {
+      max-height: none;
+      overflow: hidden;
+      padding: 0;
+    }
+    .submenu > button {
+      height: 24px;
+    }
+  }
+  nav.tabs {
+    font-size: var(--font-size-16);
+    border: none;
+    padding: 0;
+  }
   h2 {
     border-bottom: none;
     color: var(--foreground-color);
@@ -450,8 +538,6 @@ form.editable .results {
     font-size: 14px;
     width: auto;
     padding: 0 16px;
-    font-weight: 500;
-
     cursor: pointer;
 
     &.default {
@@ -459,6 +545,12 @@ form.editable .results {
       border: none;
     }
   }
+}
+
+form .form-group label {
+  font-family: var(--item-font);
+  font-size: 16px;
+  line-height: 26px;
 }
 
 form .form-group select {
@@ -473,7 +565,7 @@ form .form-group select {
 
 form .form-group,
 form .form-group-stacked {
-  margin: 8px 0;
+  margin: 16px 0;
 }
 
 #hotbar {
@@ -524,7 +616,6 @@ form .form-group-stacked {
     border-radius: 24px;
     font-size: 14px;
     padding: 0 16px;
-    font-weight: 500;
     cursor: pointer;
   }
 }
@@ -566,7 +657,6 @@ form .form-group-stacked {
     font-size: 14px;
     width: auto;
     padding: 0 16px;
-    font-weight: 500;
     cursor: pointer;
   }
 
@@ -665,7 +755,15 @@ form .form-group-stacked {
 }
 
 .tabs .item {
-  &.active,
+  &.active {
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    background: rgba(255, 255, 255, 0.2);
+    border: 1px solid var(--dark-border-color);
+    border-bottom: 0;
+    text-shadow: none;
+  }
+
   &:hover {
     text-shadow: 0 0 16px var(--highlight-background-color);
   }
@@ -680,11 +778,6 @@ form .form-group-stacked {
 }
 
 .window-app {
-  .window-content {
-    background: var(--window-background);
-    color: var(--foreground-color);
-  }
-
   &.app.journal-sheet .window-content {
     color: var(--background-color);
     background-position: -43px -120px;
@@ -763,6 +856,10 @@ a {
     border-top: 2px groove var(--light-border-color);
     border-bottom: 2px groove var(--light-border-color);
   }
+}
+
+.sheet-footer button {
+  height: 28px;
 }
 
 hr {
