--- a/scss/pirateborg/_vehicle-sheet.scss
+++ b/scss/pirateborg/_vehicle-sheet.scss
@@ -1,90 +1,11 @@
 .pirateborg {
   &.sheet {
     &.actor {
-      &.vehicle-edit .sheet-header {
-        margin: 16px;
-        display: flex;
-        flex-direction: row;
-        flex: none;
-        align-items: flex-start;
-        gap: 16px;
-
-        .header-col1 {
-          flex: 0 0 64px;
-          margin-right: 8px;
-          line-height: 0;
-        }
-
-        .header-col2 {
-          display: flex;
-          flex: 1;
-          flex-direction: column;
-          height: 100%;
-          justify-content: flex-start;
-        }
-
-        .profile-img {
-          height: 64px;
-          width: 64px;
-          border-radius: 24px;
-        }
-
-        .name-row {
-          flex: 0 0 45px;
-          width: 100%;
-        }
-
-        .holding-row {
-          flex: 0 0 35px;
-        }
-
-        .actor-type {
-          margin-bottom: 0;
-        }
-      }
-
       &.vehicle {
-        min-width: 560px;
+        min-width: 540px;
 
-        .tab {
-          border-top: 2px groove var(--light-border-color);
-        }
-
-        .actor-name {
-          margin-bottom: 8px;
-        }
-
-        .stats-row {
-          display: flex;
-          align-items: center;
-          gap: 16px;
-        }
-
-        .stats-entries {
-          display: flex;
-          align-items: center;
-          gap: 4px;
-
-          input {
-            width: 50px;
-          }
-        }
-
-        .ship-actions {
-          display: flex;
-          gap: 4px;
-          button {
-            min-width: 100px;
-
-            &.icon-button {
-              width: auto;
-              padding: 3px 5px 4px 7px;
-              margin: 0;
-              min-width: 0;
-              color: var(--foreground-color);
-              background: none;
-            }
-          }
+        .sheet-header .header-col2 .header-stats-row .stats-block input {
+          width: 38px;
         }
 
         .item-type-crew-action {
@@ -125,6 +46,9 @@
         .item-warning {
           text-align: center;
           font-style: italic;
+          min-height: auto;
+          padding: 0px;
+          font-size: 14px;
         }
 
         .item-name {
@@ -154,6 +78,7 @@
 
         .warning {
           color: var(--highlight-background-color);
+          font-weight: bold;
         }
 
         .items-header-quantity {
@@ -171,6 +96,17 @@
           margin-bottom: 16px;
           margin-right: 8px;
 
+          button {
+            width: 100px;
+          }
+
+          .icon-button {
+            background: none;
+            color: black;
+            width: auto;
+            padding: 2px 4px 0 8px;
+          }
+
           .ship-hull {
             display: flex;
             gap: 8px;
@@ -178,7 +114,7 @@
 
             .ship-hull-label {
               font-family: var(--h2-font);
-              font-size: 20px;
+              font-size: 18px;
               text-transform: capitalize;
               margin: 0;
             }
