--- a/templates/actor/vehicle-edit-sheet.html
+++ b/templates/actor/vehicle-edit-sheet.html
@@ -5,10 +5,12 @@
       <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" />
     </div>
     <div class="header-col2">
-      <div class="name-row">
+      <div class="header-title-row">
         <input class="actor-name container-name" name="name" type="text" value="{{actor.name}}" placeholder="{{ localize 'PB.Name' }}" />
       </div>
-      <div class="actor-type">{{actor.type}}</div>
+      <div class="header-subtitle-row">
+        <div class="actor-type">{{actor.type}}</div>
+      </div>
     </div>
   </header>
 
