--- a/templates/dialog/attack-dialog.html
+++ b/templates/dialog/attack-dialog.html
@@ -83,4 +83,11 @@
       </li>
     </ul>
   </div>
+  <div class="button-row">
+    <button type="submit" class="button cancel-button">{{localize "PB.Cancel"}}</button>
+    <button type="submit" class="button ok-button">
+      <i class="fas fa-dice-d20"></i>
+      {{localize "PB.Roll"}}
+    </button>
+  </div>
 </form>
