--- a/templates/actor/vehicle-edit-sheet.html
+++ b/templates/actor/vehicle-edit-sheet.html
@@ -18,8 +18,8 @@
   <nav class="sheet-tabs tabs" data-group="primary">
     <span class="spacer"></span>
     <a class="item" data-tab="description">{{ localize "PB.TabDescription" }}</a>
-    <a class="item" data-tab="items">{{ localize "PB.TabItems" }}</a>
-    <a class="item" data-tab="data">{{ localize "PB.TabData" }}</a>
+    <a class="item" data-tab="items">{{ localize "PB.TabEquipment" }}</a>
+    <a class="item" data-tab="data">{{ localize "PB.TabDetails" }}</a>
     <span class="spacer"></span>
   </nav>
 
