--- a/templates/dialog/allowed-character-generator-classes-dialog.html
+++ b/templates/dialog/allowed-character-generator-classes-dialog.html
@@ -1,6 +1,10 @@
 <form id="allowed-character-generator-classes-form" class="custom-dialog allowed-character-generator-classes-dialog">
-  <div class="section">
+  
+  <div class="custom-dialog-header">
     <div class="subtitle">{{localize "PB.AllowedCharacterGeneratorClassesSelect"}}</div>
+  </div>
+  
+  <div class="section">
     <ul>
       {{#each classes as |class|}}
       <li>
