--- a/templates/dialog/attack-dialog.html
+++ b/templates/dialog/attack-dialog.html
@@ -4,7 +4,7 @@
     <label>{{localize "PB.Attack"}} {{localize "PB.DR"}}:</label>
     <input id="attackDr" type="text" name="attackdr" value="{{attackDR}}" placeholder="12" data-dtype="Number" />
   </div>
-  <div class="form-group">
+  <div class="form-group form-group-radio-selector">
     <label></label>
     <ul class="radio-group-radio attack-dr">
       <li>
@@ -43,7 +43,7 @@
     <label>{{localize "PB.TargetArmor"}}:</label>
     <input id="targetArmor" type="text" name="targetarmor" value="{{targetArmor}}" placeholder="0" data-dtype="String" />
   </div>
-  <div class="form-group">
+  <div class="form-group form-group-radio-selector">
     <label></label>
     <ul class="radio-group-radio armor-tier">
       <li>
