--- a/scss/pirateborg/_dialog.scss
+++ b/scss/pirateborg/_dialog.scss
@@ -3,14 +3,17 @@
 /* ====================== */
 
 .custom-dialog .form-group {
-  margin: 8px;
+  margin: 16px 16px 0 16px;
+
+  &.form-group-radio-selector {
+    margin-top: 8px;
+  }
 
   label {
     font-family: var(--item-font);
     font-size: 16px;
     margin-right: 10px;
     text-align: right;
-    font-weight: 500;
     line-height: 26px;
   }
 }
@@ -40,26 +43,43 @@
   font-size: 14px;
   margin: 0;
 
+  .custom-dialog-header {
+    padding: 8px 16px;
+    .subtitle {
+      text-align: center;
+    }
+    .description {
+      text-align: center;
+    }
+  }
   .section {
-    margin: 10px 10px 20px 10px;
+    padding: 8px 16px;
   }
 
   .subtitle {
     font-family: var(--h3-font);
-    font-size: 30px;
+    font-size: 24px;
+    line-height: 24px;
   }
 
   .description {
     font-family: var(--chat-font);
-    font-size: 16px;
+    font-size: 14px;
+  }
+
+  .warning {
+    font-weight: 500;
+    color: red;
   }
 
   ul {
     list-style-type: none;
+    margin: 8px;
+    padding: 0;
   }
 
   li {
-    margin: 0 0 10px 0;
+    margin: 0 0 8px 0;
 
     input {
       &[type="checkbox"],
@@ -83,7 +103,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    margin: 16px 8px 0 8px;
+    margin-top: 16px;
     gap: 8px;
 
     button {
