--- a/templates/dialog/defend-dialog.html
+++ b/templates/dialog/defend-dialog.html
@@ -3,7 +3,7 @@
     <label>{{localize "PB.Defend"}} {{localize "PB.DR"}}:</label>
     <input id="defendDr" type="text" name="defensebasedr" value="{{defendDR}}" placeholder="12" data-dtype="Number" />
   </div>
-  <div class="form-group">
+  <div class="form-group form-group-radio-selector">
     <label></label>
     <ul class="radio-group-radio defense-base-dr">
       <li>
@@ -49,7 +49,7 @@
     <label>{{localize "PB.IncomingAttack"}}:</label>
     <input id="incomingAttack" type="text" name="incomingattack" value="{{incomingAttack}}" placeholder="1d6" data-dtype="String" />
   </div>
-  <div class="form-group">
+  <div class="form-group form-group-radio-selector">
     <label></label>
     <ul class="radio-group-radio incoming-attack">
       <li>
@@ -101,7 +101,7 @@
     <label>{{localize "PB.Armor"}}:</label>
     <input id="defendArmor" type="text" name="defendarmor" value="{{defendArmor}}" placeholder="0" data-dtype="String" />
   </div>    
-  <div class="form-group">
+  <!-- <div class="form-group">
     <label></label>
     <ul class="radio-group-radio defend-armor">
       <li>
@@ -140,7 +140,7 @@
         </label>
       </li>
     </ul>
-  </div>
+  </div> -->
   <div class="button-row">
     <button type="submit" class="button cancel-button">{{localize "PB.Cancel"}}</button>
     <button type="submit" class="button ok-button">
